Implementacao da PerguntasActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="principal">#609F13</color>
     <color name="brancoVerde">#EDFFEC</color>
     <color name="verdeForte">#00DD3B</color>
+    <color name="vermelhoCancel">#FFAFAF</color>
 </resources>
