--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,48 +30,43 @@
             app:shapeAppearanceOverlay="@style/RoundedImageView"
             app:srcCompat="@color/black" />
 
-        <ImageView
-            android:id="@+id/btn_olho_aberto"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="140dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.909"
-            app:layout_constraintStart_toEndOf="@+id/foto_usuario"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_olho_aberto" />
-
-        <ImageView
-            android:id="@+id/btn_info"
-            android:layout_width="38dp"
-            android:layout_height="38dp"
-            android:layout_marginEnd="72dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.56"
-            app:layout_constraintStart_toEndOf="@+id/btn_olho_aberto"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.562"
-            app:srcCompat="@drawable/ic_info" />
-
-        <ImageView
-            android:id="@+id/btn_config"
-            android:layout_width="38dp"
-            android:layout_height="38dp"
-            android:layout_marginEnd="28dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/btn_info"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.562"
-            app:srcCompat="@drawable/ic_config" />
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/btn_info"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_config"
+                app:layout_constraintStart_toEndOf="@+id/btn_olho_aberto"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_info" />
+
+            <ImageView
+                android:id="@+id/btn_olho_aberto"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.667"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.533"
+                app:srcCompat="@drawable/ic_olho_aberto" />
+
+            <ImageView
+                android:id="@+id/btn_config"
+                android:layout_width="32dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btn_info"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                app:srcCompat="@drawable/ic_config" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -79,7 +74,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_beneficios_constraint"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="200dp"
         android:background="@color/brancoVerde"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -146,6 +141,141 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/banner_beneficios"
             app:layout_constraintVertical_bias="0.741" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/balanco_constraint"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="270dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_beneficios_constraint"
+        app:layout_constraintVertical_bias="0.0">
+
+        <View
+            android:id="@+id/bg_balanco"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/retangulo_arredondado_bg"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txt_balanco_titulo"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:fontFamily="@font/saira"
+            android:text="Balanço Mensal"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/bg_balanco"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/bg_balanco"
+            app:layout_constraintTop_toTopOf="@+id/bg_balanco"
+            app:layout_constraintVertical_bias="0.060000002" />
+
+        <TextView
+            android:id="@+id/txt_numBalanco"
+            android:layout_width="250dp"
+            android:layout_height="30dp"
+            android:fontFamily="@font/saira"
+            android:text="R$ 500,00"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/bg_balanco"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_balanco_titulo"
+            app:layout_constraintVertical_bias="0.0" />
+
+
+        <View
+            android:id="@+id/bg_selected"
+            android:layout_width="180dp"
+            android:layout_height="80dp"
+            android:background="@drawable/banner_conners_rounded"
+            android:backgroundTint="@color/verdeForte"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_receita_titulo"
+            app:layout_constraintEnd_toEndOf="@+id/txt_receita_titulo"
+            app:layout_constraintStart_toStartOf="@+id/txt_receita_titulo"
+            app:layout_constraintTop_toTopOf="@+id/txt_receita_titulo"
+            app:layout_constraintVertical_bias="0.19999999" />
+
+        <TextView
+            android:id="@+id/txt_receita_titulo"
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:fontFamily="@font/saira"
+            android:text="Receitas"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/bg_balanco"
+            app:layout_constraintHorizontal_bias="0.13"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_numBalanco"
+            app:layout_constraintVertical_bias="0.45" />
+
+        <TextView
+            android:id="@+id/txt_receita_valor"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/saira"
+            android:text="R$ 300,00"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.13"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/txt_despesa_titulo"
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:fontFamily="@font/saira"
+            android:text="Despesas"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/bg_balanco"
+            app:layout_constraintHorizontal_bias="0.89"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_numBalanco"
+            app:layout_constraintVertical_bias="0.45" />
+
+        <TextView
+            android:id="@+id/txt_despesa_valor"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/saira"
+            android:text="R$ 200,00"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.89"
+            app:layout_constraintStart_toStartOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
