--- a/app/src/main/res/layout/registro_card.xml
+++ b/app/src/main/res/layout/registro_card.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="75dp"
     android:orientation="horizontal"
-    android:padding="16dp"
     android:background="@drawable/card_background"
+    android:paddingHorizontal="8dp"
     android:elevation="4dp"
     >
 
@@ -14,22 +13,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center">
+        android:paddingHorizontal="4dp"
+        android:translationY="8dp">
+
         <ImageView
             android:id="@+id/icon_categoria"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
             android:src="@drawable/ic_info" />
 
         <TextView
             android:id="@+id/nome_categoria"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="Categoria"
-            android:textSize="14sp"
+            android:fontFamily="@font/saira"
             android:gravity="center"
+            android:text="Categoria"
             android:textColor="@color/black"
-            android:fontFamily="@font/saira"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
     <!-- Descrição do gasto -->
@@ -40,11 +42,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.8"
-        android:paddingStart="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="18dp"
         android:text="Descrição do gasto"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:gravity="center_horizontal"
         android:fontFamily="@font/saira"
         />
 
@@ -52,9 +54,10 @@
         android:id="@+id/valor_gasto"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
         android:text="R$ 0,00"
-        android:textSize="16sp"
-        android:layout_marginTop="15dp"
+        android:textSize="18sp"
         android:textColor="@color/black"
+        android:gravity="center"
         android:fontFamily="@font/saira"/>
 </LinearLayout>
