--- a/app/src/main/res/layout/categoria_card.xml
+++ b/app/src/main/res/layout/categoria_card.xml
@@ -17,9 +17,11 @@
         android:translationY="8dp">
 
         <ImageView
-            android:id="@+id/registro_icon_categoria"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:id="@+id/categoria_icon_categoria"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginVertical="5dp"
+            android:layout_marginHorizontal="5dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_info" />
 
@@ -29,23 +31,23 @@
 
     <!-- Valor do gasto -->
     <TextView
-        android:id="@+id/registro_descricao_gasto"
+        android:id="@+id/categoria_nome_categoria"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.8"
-        android:layout_marginTop="18dp"
-        android:text="Descrição do gasto"
+        android:layout_marginTop="20dp"
+        android:text="Nome da categoria"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:gravity="center_horizontal"
         android:fontFamily="@font/saira"
         />
 
     <TextView
-        android:id="@+id/registro_valor_gasto"
-        android:layout_width="80dp"
+        android:id="@+id/categoria_valor_gasto"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="20dp"
         android:text="R$ 0,00"
         android:textSize="18sp"
         android:textColor="@color/black"
