--- a/app/src/main/res/layout/activity_perguntas.xml
+++ b/app/src/main/res/layout/activity_perguntas.xml
@@ -99,17 +99,15 @@
 
     <Button
         android:id="@+id/btn_prox_pergunta"
-        android:layout_width="372dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginHorizontal="70dp"
         android:backgroundTint="@color/verdeForte"
         android:onClick="handleProximaPergunta"
-        android:text="Próxima pergunta"
+        android:text="Continuar"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="22dp"
-        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/green_rectangle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,16 +118,17 @@
 
     <Button
         android:id="@+id/btn_sim_caduni"
-        android:layout_width="143dp"
+        android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_marginTop="73dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="@color/brancoVerde"
         android:fontFamily="@font/saira"
         android:onClick="handlerSimCadUni"
-        android:text="Sim"
+        android:text="Já possuo o Cadastro Único!"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
         app:layout_constraintHorizontal_bias="0.88"
@@ -140,59 +139,60 @@
 
     <Button
         android:id="@+id/btn_nao_caduni"
-        android:layout_width="143dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="74dp"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="140dp"
         android:backgroundTint="@color/vermelhoCancel"
         android:fontFamily="@font/saira"
         android:onClick="handlerNãoCadUni"
-        android:text="Não"
+        android:text="Ainda não"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
-        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
-        app:layout_constraintVertical_bias="0.006" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btn_sim_idoso"
-        android:visibility="invisible"
-        android:layout_width="143dp"
+        android:layout_width="250dp"
         android:layout_height="65dp"
-        android:layout_marginTop="73dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="@color/brancoVerde"
         android:fontFamily="@font/saira"
         android:onClick="handlerSimIdoso"
         android:text="Sim"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
+        android:visibility="invisible"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
-        app:layout_constraintHorizontal_bias="0.88"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
-        app:layout_constraintVertical_bias="0.005" />
+        app:layout_constraintVertical_bias="0.006" />
 
     <Button
         android:id="@+id/btn_nao_idoso"
-        android:layout_width="143dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="74dp"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="140dp"
         android:backgroundTint="@color/vermelhoCancel"
         android:fontFamily="@font/saira"
         android:onClick="handlerNãoIdoso"
         android:text="Não"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
+        app:cornerRadius="8dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
-        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
         app:layout_constraintVertical_bias="0.0" />
@@ -200,39 +200,39 @@
     <Button
         android:id="@+id/btn_sim_rural"
         android:visibility="invisible"
-        android:layout_width="143dp"
+        android:layout_width="250dp"
         android:layout_height="65dp"
-        android:layout_marginTop="73dp"
+        android:layout_marginTop="50dp"
         android:backgroundTint="@color/brancoVerde"
         android:fontFamily="@font/saira"
         android:onClick="handlerSimRural"
         android:text="Sim"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
-        app:layout_constraintHorizontal_bias="0.88"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
         app:layout_constraintVertical_bias="0.005" />
 
     <Button
         android:id="@+id/btn_nao_rural"
-        android:layout_width="143dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="74dp"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="140dp"
         android:backgroundTint="@color/vermelhoCancel"
         android:fontFamily="@font/saira"
         android:onClick="handlerNãoRural"
         android:text="Não"
         android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
+        android:textSize="22sp"
+        app:cornerRadius="8dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
-        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
         app:layout_constraintVertical_bias="0.0" />
