--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="principal">#609F13</color>
     <color name="brancoVerde">#EDFFEC</color>
     <color name="verdeForte">#00DD3B</color>
-    <color name="vermelhoCancel">#FFAFAF</color>
+    <color name="buttonDisable">#9EC19E</color>
+    <color name="txtDisable">#717171</color>
+    <color name="vermelhoCancel">#FAC9C9</color>
 </resources>
