--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -39,18 +39,17 @@
         android:id="@+id/txt_pergunta"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/saira_bold"
+        android:padding="10dp"
         android:rotationX="0"
         android:text="Obrigado por escolher a OrganizAI, como seu app de organização de despesas!"
-        android:textAlignment="textStart"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/green_rectangle"
         app:layout_constraintVertical_bias="0.123" />
