--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/foto_usuario"
+            android:id="@+id/foto_usuarioctb"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="36dp"
@@ -48,7 +48,7 @@
             android:layout_height="28dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/foto_usuario"
+            app:layout_constraintStart_toEndOf="@+id/foto_usuarioctb"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_olho_aberto" />
 
