--- a/app/src/main/res/layout/contabancaria.xml
+++ b/app/src/main/res/layout/contabancaria.xml
@@ -51,6 +51,7 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginEnd="16dp"
+            android:contentDescription="@string/todo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.791"
@@ -80,6 +81,7 @@
         android:id="@+id/textsaldo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="TODO"
         android:fontFamily="@font/saira_bold"
         android:text="@string/Saldo"
         android:textColor="@color/black"
@@ -89,13 +91,15 @@
         app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/header"
-        app:layout_constraintVertical_bias="0.201"/>
+        app:layout_constraintVertical_bias="0.201"
+        tools:ignore="HardcodedText" />
 
 
     <ImageView
         android:id="@+id/btn_olho_aberto"
         android:layout_width="28dp"
         android:layout_height="28dp"
+        android:contentDescription="@string/todo3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.958"
@@ -103,7 +107,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2"
         app:srcCompat="@drawable/ic_olho_aberto"
-        tools:ignore="UnknownIdInLayout" />
+        tools:ignore="ContentDescription,UnknownIdInLayout" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/divisoria1"
