--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/green_rectangle"
+        android:id="@+id/menu_perfil"
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:background="@drawable/retangulo_arredondado_bg"
@@ -51,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/green_rectangle"
+        app:layout_constraintTop_toTopOf="@+id/menu_perfil"
         app:layout_constraintVertical_bias="0.123" />
 
     <Button
