--- a/app/src/main/res/layout/activity_perguntas.xml
+++ b/app/src/main/res/layout/activity_perguntas.xml
@@ -18,7 +18,7 @@
         android:text="@string/nome_app"
         android:textColor="@color/principal"
         android:textSize="48sp"
-        app:layout_constraintBottom_toTopOf="@+id/green_rectangle"
+        app:layout_constraintBottom_toTopOf="@+id/menu_perfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,7 +26,7 @@
 
 
     <View
-        android:id="@+id/green_rectangle"
+        android:id="@+id/menu_perfil"
         android:layout_width="0dp"
         android:layout_height="550dp"
         android:background="@drawable/retangulo_arredondado_bg"
@@ -50,7 +50,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/green_rectangle"
+        app:layout_constraintTop_toTopOf="@+id/menu_perfil"
         app:layout_constraintVertical_bias="0.07999998" />
 
     <com.blackcat.currencyedittext.CurrencyEditText
@@ -67,7 +67,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         app:allow_negative_values="false"
-        app:layout_constraintBottom_toBottomOf="@+id/green_rectangle"
+        app:layout_constraintBottom_toBottomOf="@+id/menu_perfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +90,7 @@
         android:textSize="20sp"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="@+id/green_rectangle"
+        app:layout_constraintBottom_toBottomOf="@+id/menu_perfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.438"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,11 +109,11 @@
         android:textColor="@color/black"
         android:textSize="22dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/green_rectangle"
+        app:layout_constraintBottom_toBottomOf="@+id/menu_perfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/green_rectangle"
+        app:layout_constraintTop_toTopOf="@+id/menu_perfil"
         app:layout_constraintVertical_bias="0.81" />
 
     <Button
@@ -130,7 +130,7 @@
         android:textSize="22sp"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
+        app:layout_constraintEnd_toEndOf="@+id/menu_perfil"
         app:layout_constraintHorizontal_bias="0.88"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
@@ -151,7 +151,7 @@
         android:textSize="22sp"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
+        app:layout_constraintEnd_toEndOf="@+id/menu_perfil"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
@@ -171,7 +171,7 @@
         android:visibility="invisible"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
+        app:layout_constraintEnd_toEndOf="@+id/menu_perfil"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
@@ -191,7 +191,7 @@
         app:cornerRadius="8dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
+        app:layout_constraintEnd_toEndOf="@+id/menu_perfil"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
@@ -211,7 +211,7 @@
         android:textSize="22sp"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
+        app:layout_constraintEnd_toEndOf="@+id/menu_perfil"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
@@ -231,7 +231,7 @@
         app:cornerRadius="8dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/green_rectangle"
+        app:layout_constraintEnd_toEndOf="@+id/menu_perfil"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_pergunta"
