Ajuste na tela de perguntas

--- a/app/src/main/res/layout/activity_perguntas.xml
+++ b/app/src/main/res/layout/activity_perguntas.xml
@@ -87,6 +87,7 @@
         android:textAlignment="center"
         android:textColor="@color/black"
         android:hint="0"
+        android:textColorHint="@color/black"
         android:textSize="20sp"
         android:ems="10"
         android:inputType="number"
@@ -109,6 +110,7 @@
         android:textColor="@color/black"
         android:textSize="22dp"
         android:visibility="invisible"
+        app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/green_rectangle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
