--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,8 +92,9 @@
 
         <TextView
             android:id="@+id/txt_banner_beneficios"
-            android:layout_width="250dp"
+            android:layout_width="0dp"
             android:layout_height="45dp"
+            android:layout_marginHorizontal="15dp"
             android:fontFamily="@font/saira_bold"
             android:text="A partir do seu perfil de usuário, veja quais benefícios você tem direito."
             android:textAlignment="textStart"
@@ -101,10 +102,10 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/banner_beneficios"
             app:layout_constraintEnd_toEndOf="@+id/banner_beneficios"
-            app:layout_constraintHorizontal_bias="0.231"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/banner_beneficios"
             app:layout_constraintTop_toTopOf="@+id/banner_beneficios"
-            app:layout_constraintVertical_bias="0.18" />
+            app:layout_constraintVertical_bias="0.132" />
 
         <Button
             android:id="@+id/btn_meus_beneficios"
