--- a/app/src/main/res/layout/beneficio_card.xml
+++ b/app/src/main/res/layout/beneficio_card.xml
@@ -64,8 +64,7 @@
             android:id="@+id/txt_is_elegivel"
             android:visibility="invisible"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.23"
+            android:layout_height="wrap_content"
             android:text="Seu perfil se encaixa nesse benefício!"
             android:textColor="@color/black"
             android:textSize="12sp"
