--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -37,22 +37,20 @@
 
     <TextView
         android:id="@+id/txt_pergunta"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
         android:fontFamily="@font/saira_bold"
-        android:padding="10dp"
-        android:rotationX="0"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp"
         android:text="Obrigado por escolher a OrganizAI, como seu app de organização de despesas!"
         android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_proximo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/green_rectangle"
-        app:layout_constraintVertical_bias="0.123" />
+        app:layout_constraintVertical_bias="0.36" />
 
     <Button
         android:id="@+id/btn_proximo"
